# RustCPPPlugins

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml
cpp/: CMakeLists.txt
cpp/src/: main.cpp
my_devkit_daemon/: CMakeLists.txt
my_devkit_daemon/src/: main.cpp
my_devkit_plugin/: CMakeLists.txt  Cargo.toml
my_devkit_plugin/src/: ffi.rs  lib.rs  plugin.rs
my_devkit_plugin_macros/: Cargo.toml
my_devkit_plugin_macros/src/: lib.rs
my_devkit_plugins/: CMakeLists.txt
my_devkit_plugins/my_plugin/: CMakeLists.txt  Cargo.toml
my_devkit_plugins/my_plugin/src/: lib.rs
my_plugin/: CMakeLists.txt  Cargo.toml
my_plugin/src/: lib.rs
rust_plugin/: Cargo.toml
rust_plugin/src/: lib.rs
rust_plugin_manager/: CMakeLists.txt  Cargo.toml  build.rs
rust_plugin_manager/src/: lib.rs
